--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -112,31 +112,33 @@
 .section3 {
   background-color: #f0ebe5;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  @media all and (min-width: 768px) {
-    display: flex;
+  align-items: center;
+
+  @media all and (min-width: 1100px) {
     flex-direction: row;
-    justify-content: center;
+    height: 571px;
   }
 
   &__box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
+    text-align: center;
+    @media all and (min-width: 768px) {
+      width: 50%;
+    }
     &__title {
       color: #0c474b;
       font-size: 24px;
       font-weight: 600;
       margin-top: 87px;
       margin-bottom: 10px;
+      margin-left: 20px;
     }
 
     &__p {
       color: #0c474b;
       font-size: 14px;
+      margin-left: 20px;
     }
 
     &__button {
@@ -158,8 +160,11 @@
   }
 
   &__image {
-    overflow: hidden;
-    object-fit: cover;
-    width: 50%;
+    width: 100%;
+    /*height: 100%; */
+    @media all and (min-width: 1100px) {
+      width: 50%;
+      height: 100%;
+    }
   }
 }
