--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -7,15 +7,14 @@
     </section> 
 
     <section class="section-menu">
-      <nav class="menu-nav">
-      <ul class="menu-nav__list" > <!-- Ocultar elemento-->
-        <li class="menu-nav__list___items"><a href="#">Productos</a></li>
-        <li class="manu-nav__list__items"><a href="#">Colecciones </a></li>
-        <li class="menu-nav__list__items"><a href="#">Tienda</a></li>
-        <li class="menu-nav__list__items"><a href="#">Inicio </a></li>
+      <nav class="section-menu__menu">
+      <ul class="section-menu__menu__list" > <!-- Ocultar elemento-->
+        <li class="section-menu__menu__list__items"><a href="#">Productos</a></li>
+        <li class="section-menu__manu__list__items"><a href="#">Colecciones </a></li>
+        <li class="section-menu__menu__list__items"><a href="#">Tienda</a></li>
+        <li class="section-menu___menu__list__items"><a href="#">Inicio </a></li>
       </ul> 
     </nav>
-
     </section>
     
   <section class="section-logo" >
