--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -44,7 +44,7 @@
     <section class="section3">
         
         <div class="section3__box">
-                <h2 class="section3__box__title">Disfruta creando espacios</h2>
+                <h2 class="animate__animated animate__bounce section3__box__title">Disfruta creando espacios</h2>
                 <p class="section3__box__p">Una linea de productos diseñados para todos tus espacios</p>
                 <input class="section3__box__button" type="submit" value="Comprar ahora">
         </div>
