--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -133,6 +133,8 @@
       margin-top: 87px;
       margin-bottom: 10px;
       margin-left: 20px;
+      animation-duration: 3s;
+      animation-delay: 2s;
     }
 
     &__p {
