new changes in styles and new links

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -101,7 +101,7 @@
         <li>
           <a
             class="container3__items__icon"
-            href="https://adalab.es"
+            href="https://www.linkedin.com/in/noeliaromerogarcia/"
             target="_blank"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
@@ -109,7 +109,7 @@
         <li>
           <a
             class="container3__items__icon"
-            href="https://adalab.es"
+            href="https://www.instagram.com/bluromero/"
             target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
@@ -117,20 +117,21 @@
         <li>
           <a
             class="container3__items__icon"
-            href="https://adalab.es"
+            href="https://github.com/romerogarcia"
             target="_blank"
-            ><i class="fa-brands fa-twitter"></i
+            ><i class="fa-brands fa-github"></i
           ></a>
         </li>
       </ul>
     </nav>
     <nav class="container4">
       <a href="#"
-        ><i
-          class="fa-solid fa-arrow-up container4__icon-arrow"
+        >
+        <i
+          class="fa-solid fa-circle-arrow-up fa-2x container4__icon-arrow"
           alt="Arrow pointing upwards"
-        ></i
-      ></a>
+        ></i>
+    </a>
     </nav>
 
 </footer>
