--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -73,6 +73,7 @@ header {
     margin-top: 19px;
     margin-bottom: 64px;
     transition: all 0.9s;
+    cursor: pointer;
     @media all and (min-width: 768px) {
       margin-bottom: 100px;
     }
