--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -69,6 +69,24 @@
   }
 }
 
+.section-new {
+  background-color: #0c474b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+
+  &__container {
+    @media all and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      padding-right: 30px;
+      padding-left: 30px;
+    }
+  }
+}
+
 .section2 {
   background-color: #ff975a;
   &__box {
@@ -154,6 +172,7 @@
       margin: 24px 119px 0 119px;
       margin-bottom: 92px;
       transition: all 0.9s;
+      cursor: pointer;
       &:hover {
         background-color: rgb(245, 245, 128);
         color: #0c474b;
